--- a/Python IV.ipynb
+++ b/Python IV.ipynb
@@ -53,12 +53,12 @@
     "# What is a Python Dataframe?\n",
     "* 2-dimensional data structure that can store data of different types (including characters, integers, floating point values, factors and more) in a tabular form. Each row holds information for each column.\n",
     "* Similar to a spreadsheet or an SQL table or the **'data.frame'** in R. \n",
-    "* Dataframes have indexes starting fron 0. \n",
+    "* Dataframes have indexes starting from 0. \n",
     "* An index refers to the position of an element in the data structure.\n",
     "\n",
     "# What is a Python Series?\n",
     "* A series is a one-dimensional structure like an associative array. \n",
-    "* Serieses have indexes starting fron 0.\n",
+    "* Series have indexes starting from 0.\n",
     "* An index refers to the position of a value in the data structure.\n",
     "\n",
     "|index | value     |\n",
@@ -71,9 +71,9 @@
     "# Pandas in Python (Python Data Analysis Library)\n",
     "* **Python Data Analysis Library** shortened as **pandas** is a third-party package for data manipulation\n",
     "* The **pandas** package is one of the best options for working with tabular data in Python\n",
-    "* **pandas** ingest data as Dataframe objects and works with both Dataframes and Serieses\n",
+    "* **pandas** ingest data as Dataframe objects and works with both Dataframes and Series\n",
     "* **pandas** uses sequential indexes by default\n",
-    "* **pandas** provides data structures, produces high quality plots with **matplotlib** (a Pyhton package graphing) and integrates nicely with other libraries that use **NumPy** (a Python package for arrays processing).\n",
+    "* **pandas** provides data structures, produces high quality plots with **matplotlib** (a Python package graphing) and integrates nicely with other libraries that use **NumPy** (a Python package for arrays processing).\n",
     "* Operations on **numpy** arrays also work on **pandas** Series \n",
     "\n",
     "**Importing Pandas**"
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* You may select a column data aslo by using the column name as an 'attribute'<br>\n",
+    "* You may select a column data also by using the column name as an 'attribute'<br>\n",
     "\n",
     "*Syntax*:<br>\n",
     "**data_frame_object_name.column_name**\n",
@@ -398,8 +398,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Alternatetively using numpy *'unique'* function for selecting Unique values from a column\n",
-    "Many functions icluding the unique selection can be done with the Numpy package.<br>\n",
+    "#### Alternatively using numpy *'unique'* function for selecting Unique values from a column\n",
+    "Many functions including the unique selection can be done with the Numpy package.<br>\n",
     "The **numpy.unique()** function can be used to select the unique values in a one dimensional series or column\n",
     "\n",
     "*Syntax*:<br>\n",
@@ -569,12 +569,12 @@
    "metadata": {},
    "source": [
     "#### Slicing Subsets of Rows and Columns\n",
-    "We can select specific a row and column value (a specific data element) or ranges of the data in both the row and column directions using either the **'ilac'** data attribute with integer-based indexing or the **'lac'** data attribute with integers for rows and the column labels.\n",
+    "We can select specific a row and column value (a specific data element) or ranges of the data in both the row and column directions using either the **'iloc'** data attribute with integer-based indexing or the **'loc'** data attribute with integers for rows and the column labels.\n",
     "\n",
     "\n",
     "##### iloc \n",
     "* Integer based indexing in the row and column directions\n",
-    "* Indexing follows the same **0-based** indesxing and slicing concepts used earlier\n",
+    "* Indexing follows the same **0-based** indexing and slicing concepts used earlier\n",
     "\n",
     "*Syntax*:<br>\n",
     "**# for a specific data element**\n",
@@ -613,7 +613,7 @@
     "\n",
     "**data_frame_object_name.iloc [ starting_row_index : ending_row_index + 1 , starting_column_index : ending_column_index + 1 ]**\n",
     "\n",
-    "**# Remember that in Python slicing, ending indices are not included in selection. So, the index location [1:4, 0:5] selects the  element in row 2 to 4 (index 1 to 3) snd in columns 1 to 5 (index 0 to 4) of the DataFrame.**\n",
+    "**# Remember that in Python slicing, ending indices are not included in selection. So, the index location [1:4, 0:5] selects the  element in row 2 to 4 (index 1 to 3) and in columns 1 to 5 (index 0 to 4) of the DataFrame.**\n",
     "\n",
     "*Usage*:"
    ]
@@ -701,7 +701,7 @@
     "* Label based indexing.\n",
     "* Rows use Integer labels. When integers are used, they are interpreted as a label and not indexes.\n",
     "* Columns use a list of strings of the column names.\n",
-    "* Indexing follows the same **0-based** indesxing and slicing concepts used earlier\n",
+    "* Indexing follows the same **0-based** indexing and slicing concepts used earlier\n",
     "\n",
     "NB: The integer row labels in **'loc'** are different from the integer indexes in **'iloc'**. With loc, both the start bound and the stop bound are inclusive.\n",
     "\n",
@@ -808,12 +808,12 @@
     "<h5><center>Helpful Tips!</center></h5>\n",
     "\n",
     "![image.png](attachment:image.png)\n",
-    "1. **Remember the python Comparison Operators dicussed in the Intoduction to Python Programming worksop**\n",
+    "1. **Remember the python Comparison Operators discussed in the Introduction to Python Programming workshop**\n",
     "   * Equals: **==**\n",
     "   * Not equals: **!=**\n",
     "   * Greater than, less than: **>** or **<**\n",
     "   * Greater than or equal to, Less than or equal to: **>=** or **<=**<br><br>\n",
-    "2. **Remember the python Logical Operators dicussed in the Intoduction to Python Programming worksop. This time we use the BITWISE versions**<br>\n",
+    "2. **Remember the python Logical Operators discussed in the Introduction to Python Programming workshop. This time we use the BITWISE versions**<br>\n",
     "   * Logical AND ( **&** )<br>\n",
     "     *Syntax*:<br> \n",
     "     *Note the parenthesis around each condition*<br>\n",
@@ -917,7 +917,7 @@
    "metadata": {},
    "source": [
     "### Summary statistics methods\n",
-    "**Calculate basic statistics for all records in all clomuns, a group of colums or a single column in a dataframe**"
+    "**Calculate basic statistics for all records in all columns, a group of columns or a single column in a dataframe**"
    ]
   },
   {
@@ -1105,7 +1105,7 @@
     "### Quick & Easy Plotting of Data Using Pandas *plot(  )* method\n",
     "We can plot our summary stats using Pandas using the pandas **'plot (  )'** method\n",
     "\n",
-    "**Lets see the number of animals per species**"
+    "**Let's see the number of animals per species**"
    ]
   },
   {
@@ -1214,7 +1214,7 @@
     "1. Create a script/module called **'survey_years.py'** with the following\n",
     "   * Import the **pandas** and **os** modules\n",
     "   * Create a new folder called **'yearly_files'** using the **os.mkdir( ' data/yearly_files ' )** function\n",
-    "   * Craete a first function called **generate_year_files** that imports **'surveys.csv'** into a dataframe and do the following<br>\n",
+    "   * Create a first function called **generate_year_files** that imports **'surveys.csv'** into a dataframe and do the following<br>\n",
     "     a) Read all the unique years<br>\n",
     "     b) For each year between **1990** and **2000**, create new **CSV** files with data from only one particular year.<br> \n",
     "     c) The name of the new files should follow the format **'survey_year.csv'** example **'survey_1977.csv'**<br>\n",
@@ -1223,7 +1223,7 @@
     "     **HINTS**:<br> \n",
     "     Use the **os.listdir ( ' path/survey_\\* ' )** function to get the list of all files<br>\n",
     "     Use the **for loop** to loop through and print the file names<br><br>\n",
-    "2. Import the **'survey_years.py'** moduke into your current session and use the two functions to generate the files for the years and print the file names      "
+    "2. Import the **'survey_years.py'** module into your current session and use the two functions to generate the files for the years and print the file names      "
    ]
   },
   {
@@ -1252,12 +1252,12 @@
    "metadata": {},
    "source": [
     "# Advanced and Future Topics\n",
-    "* Concactenation of dataFrames with the pandas concat function\n",
+    "* Concatenation of dataFrames with the pandas concat function\n",
     "* Left, Right, Inner and Outer joins with the pandas merge function\n",
     "* Python for Data Visualization\n",
     "* Error Handling and Exceptions\n",
     "* List Comprehension\n",
-    "* Rgular Expressions\n",
+    "* Regular Expressions\n",
     "* Database Access\n",
     "* Multithreading\n",
     "\n",
@@ -1277,7 +1277,7 @@
     "# $\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;$Questions ??\n",
     "\n",
     "#  $\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;$Survey\n",
-    "### $\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;$https://www.surveymonkey.com/r/python4-19Jul25\n",
+    "### $\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;$https://www.surveymonkey.com/r/python-19Oct16\n",
     "\n",
     "\n",
     "\n",
