--- a/Python IV.ipynb
+++ b/Python IV.ipynb
@@ -569,7 +569,7 @@
    "metadata": {},
    "source": [
     "#### Slicing Subsets of Rows and Columns\n",
-    "We can select specific a row and column value (a specific data element) or ranges of the data in both the row and column directions using either the **'iloc'** data attribute with integer-based indexing or the **'loc'** data attribute with integers for rows and the column labels.\n",
+    "We can select a specific row and a column value (a specific data element) or ranges of the data in both the row and column directions using either the **'iloc'** data attribute with integer-based indexing or the **'loc'** data attribute with integers for rows and the column labels.\n",
     "\n",
     "\n",
     "##### iloc \n",
