--- a/Python IV.ipynb
+++ b/Python IV.ipynb
@@ -708,11 +708,11 @@
     "*Syntax*:<br>\n",
     "**# selection by specifying a list of integer row labels and list of column names**\n",
     "\n",
-    "**data_frame_object_name.iloc [ [list of row indexes ] , [list of column names ] ]**\n",
+    "**data_frame_object_name.loc [ [list of row indexes ] , [list of column names ] ]**\n",
     "\n",
     "**# selection by specifying starting and ending integer row label and list of column names**\n",
     "\n",
-    "**data_frame_object_name.iloc [ starting_integer_row label : ending_integer_row label , [list of column names ] ]**\n",
+    "**data_frame_object_name.loc [ starting_integer_row label : ending_integer_row label , [list of column names ] ]**\n",
     "\n",
     "\n",
     "*Usage*:"
@@ -1277,7 +1277,7 @@
     "# $\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;$Questions ??\n",
     "\n",
     "#  $\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;$Survey\n",
-    "### $\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;$https://www.surveymonkey.com/r/python-19Nov19\n",
+    "### $\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;\\;$https://www.surveymonkey.com/r/python-20Jan30\n",
     "\n",
     "\n",
     "\n",
