--- a/Python IV.ipynb
+++ b/Python IV.ipynb
@@ -874,7 +874,7 @@
     "1. Select a subset of rows in the surveys_df DataFrame that contain data from the year 1999 and weights less than or equal to 8.\n",
     "   How many rows did you end up with? What did your neighbor get?\n",
     "2. Display **record_id** and **plot_id** of data that contain data of the years 1999, 2000, 1977 and 1989.\n",
-    "3. Write query that selects all rows with sex NOT equal to ‘M’ or ‘F’ in the data. Write two different queries that produce this same result.Write two different queries that do the same thing."
+    "3. Write query that selects all rows with sex equal to ‘M’ or ‘F’ in the data. Write two different queries that produce this same result.Write two different queries that do the same thing."
    ]
   },
   {
