--- a/Exercise Solutions/solutions.ipynb
+++ b/Exercise Solutions/solutions.ipynb
@@ -1745,7 +1745,7 @@
    "metadata": {},
    "source": [
     "#### Solution to 1.3\n",
-    "All rows with sex NOT equal to ‘M’ or ‘F’ in the data. Write two different queries that produce this same result. Write two different queries that do the same thing.\n",
+    "All rows with sex equal to ‘M’ or ‘F’ in the data. Write two different queries that produce this same result. Write two different queries that do the same thing.\n",
     "\n",
     "###### One solution"
    ]
